--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,38 +1,45 @@
-<div class="navbar navbar-inverse bg-inverse">
+<div class="navbar">
     <a class="navbar-brand">SPORTS STORE</a>
 </div>
-<div class="col-xl-3 p-1">
-    <button class="btn btn-block btn-outline-primary" (click)="changeCategory()">
-        Home
-    </button>
-    <button *ngFor="let cat of categories" class="btn btn-outline-primary btn-block"
-            [class.active]="cat == selectedCategory" (click)="changeCategory(cat)">
-        {{cat}}
-	</button>
-</div>
-<div class="col-xl-9 pa-1">
-    <div *ngFor="let product of products" class="card card-outline-primary">
-        <h4 class="card-header">
-            {{product.name}}
-            <span class="pull-xs-right tag tag-pill tag-primary">
-                {{ product.price | currency:"USD":true:"2.2-2" }}
-            </span>
-        </h4>
-        <div class="card-text p-1">{{product.description}}</div>
-	</div>
-	<div class="form-inline pull-xs-left mr-1">
-        <select class="form-control" [value]="productsPerPage"
-                (change)="changePageSize($event.target.value)">
-            <option value="3">3 per Page</option>
-            <option value="4">4 per Page</option>
-            <option value="6">6 per Page</option>
-            <option value="8">8 per Page</option>
-        </select>
-	</div>
-    <div class="btn-group pull-xs-right">
-        <button *ngFor="let page of pageNumbers" (click)="changePage(page)"
-            class="btn btn-outline-primary" [class.active]="page == selectedPage">
-                {{page}}
+<div class="card-align">
+    <div class="col-xl-3 p-1">
+        <button class="btn btn-block btn-outline-primary" (click)="changeCategory()">
+            Home
         </button>
+        <button *ngFor="let cat of categories" class="btn btn-outline-primary btn-block"
+                [class.active]="cat == selectedCategory" (click)="changeCategory(cat)">
+            {{cat}}
+        </button>
+    </div>
+
+    <div class="col-xl-9 pa-1 product-group">
+        <div *ngFor="let product of products" class="card">
+            <h4 class="card-header">
+                <div>
+                    {{product.name}}
+                </div>
+                <span class="">
+                    {{ product.price | currency:"USD":true:"2.2-2" }}
+                </span>
+            </h4>
+            <div class="p-1">{{product.description}}</div>
+        </div>
+
+        <div class="product-navigation">
+            <button *counter="let page of pageCount" (click)="changePage(page)"
+                class="btn btn-outline-primary" [class.active]="page == selectedPage">
+                    {{page}}
+            </button>
+        </div>
+    </div>
+
+    <div class="form-inline">
+            <select class="form-control" [value]="productsPerPage"
+                    (change)="changePageSize($event.target.value)">
+                <option value="3">3 per Page</option>
+                <option value="4">4 per Page</option>
+                <option value="6">6 per Page</option>
+                <option value="8">8 per Page</option>
+            </select>
     </div>
 </div>
