--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -66,6 +66,9 @@
                     [class.active]="cat == selectedCategory" (click)="changeCategory(cat)">
                 {{cat}}
             </button>
+            <button class="btn btn-block btn-danger mt-3" routerLink="/admin">
+              Admin
+            </button>
         </div>
     
         <div class="col-xl-9 product-group">
